// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendBroadcastForm render should render an empty form with no action 1`] = `
Object {
  "attachmentError": "",
  "attachments": Array [],
  "compose": Object {
    "value": "",
  },
  "recipients": Object {
    "value": Array [],
  },
  "template": Object {
    "value": null,
  },
  "templateVariables": Array [],
  "uploadError": "",
  "uploadInProgress": false,
  "valid": false,
  "validAttachment": false,
}
`;

exports[`SendBroadcastForm render should render an empty form with no action 2`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="send_broadcast"
  tabs={
    Array [
      Object {
        "body": <React.Fragment>
          <p>
            Add an attachment to each message. The attachment can be a file you upload or a dynamic URL using expressions and variables from your Flow.
          </p>
          <React.Fragment>
            <div
              className="url_attachment"
            >
              <div
                className="type_choice"
              >
                <SelectElement
                  entry={
                    Object {
                      "value": null,
                    }
                  }
                  name="Type Options"
                  onChange={[Function]}
                  options={
                    Array [
                      Object {
                        "name": "Image URL",
                        "value": "image",
                      },
                      Object {
                        "name": "Audio URL",
                        "value": "audio",
                      },
                      Object {
                        "name": "Video URL",
                        "value": "video",
                      },
                      Object {
                        "name": "Sticker URL",
                        "value": "sticker",
                      },
                      Object {
                        "name": "PDF Document URL",
                        "value": "document",
                      },
                      Object {
                        "name": "Expression",
                        "value": "expression",
                      },
                    ]
                  }
                  placeholder="Add Attachment"
                  style="small"
                />
              </div>
            </div>
            <div />
          </React.Fragment>
          <input
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </React.Fragment>,
        "checked": false,
        "hasErrors": false,
        "name": "Attachments",
      },
      Object {
        "body": <React.Fragment>
          <p>
            Sending messages over a WhatsApp channel requires that a template be used if you have not received a message from a contact in the last 24 hours. Setting a template to use over WhatsApp is especially important for the first message in your flow.
          </p>
          <AssetSelector
            entry={
              Object {
                "value": null,
              }
            }
            formClearable={true}
            name="template"
            noOptionsMessage="No templates found"
            onChange={[Function]}
            searchable={true}
            shouldExclude={[Function]}
          />
        </React.Fragment>,
        "checked": false,
        "hasErrors": false,
        "name": "WhatsApp",
      },
    ]
  }
  title="Send message to staff"
>
  <TypeList
    __className=""
    customTitle="Step 1: When a contact arrives at this point in your flow..."
    initialType={
      Object {
        "component": [Function],
        "description": "Send a staff member a message",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": Array [
          "text",
        ],
        "name": "Send message to staff",
        "type": "send_broadcast",
      }
    }
    onChange={[MockFunction]}
  />
  <AssetSelector
    assets={
      Object {
        "items": Object {},
        "type": "contact",
      }
    }
    entry={
      Object {
        "value": Array [],
      }
    }
    expressions={true}
    multi={true}
    name="Recipients"
    onChange={[Function]}
    placeholder="Select Contacts"
    searchable={true}
    shouldExclude={[Function]}
  />
  <p />
  <p>
    Step 2: Select a template on the WhatsApp tab
  </p>
</Dialog>
`;

exports[`SendBroadcastForm render should render self, children with base props 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="send_broadcast"
  tabs={
    Array [
      Object {
        "body": <React.Fragment>
          <p>
            Add an attachment to each message. The attachment can be a file you upload or a dynamic URL using expressions and variables from your Flow.
          </p>
          <React.Fragment>
            <div
              className="url_attachment"
            >
              <div
                className="type_choice"
              >
                <SelectElement
                  entry={
                    Object {
                      "value": null,
                    }
                  }
                  name="Type Options"
                  onChange={[Function]}
                  options={
                    Array [
                      Object {
                        "name": "Image URL",
                        "value": "image",
                      },
                      Object {
                        "name": "Audio URL",
                        "value": "audio",
                      },
                      Object {
                        "name": "Video URL",
                        "value": "video",
                      },
                      Object {
                        "name": "Sticker URL",
                        "value": "sticker",
                      },
                      Object {
                        "name": "PDF Document URL",
                        "value": "document",
                      },
                      Object {
                        "name": "Expression",
                        "value": "expression",
                      },
                    ]
                  }
                  placeholder="Add Attachment"
                  style="small"
                />
              </div>
            </div>
            <div />
          </React.Fragment>
          <input
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </React.Fragment>,
        "checked": false,
        "hasErrors": false,
        "name": "Attachments",
      },
      Object {
        "body": <React.Fragment>
          <p>
            Sending messages over a WhatsApp channel requires that a template be used if you have not received a message from a contact in the last 24 hours. Setting a template to use over WhatsApp is especially important for the first message in your flow.
          </p>
          <AssetSelector
            entry={
              Object {
                "value": null,
              }
            }
            formClearable={true}
            name="template"
            noOptionsMessage="No templates found"
            onChange={[Function]}
            searchable={true}
            shouldExclude={[Function]}
          />
        </React.Fragment>,
        "checked": false,
        "hasErrors": false,
        "name": "WhatsApp",
      },
    ]
  }
  title="Send message to staff"
>
  <TypeList
    __className=""
    customTitle="Step 1: When a contact arrives at this point in your flow..."
    initialType={
      Object {
        "component": [Function],
        "description": "Send a staff member a message",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": Array [
          "text",
        ],
        "name": "Send message to staff",
        "type": "send_broadcast",
      }
    }
    onChange={[MockFunction]}
  />
  <AssetSelector
    assets={
      Object {
        "items": Object {},
        "type": "contact",
      }
    }
    entry={
      Object {
        "value": Array [
          Object {
            "id": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
            "name": "Cat Fanciers",
            "type": "group",
          },
          Object {
            "id": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
            "name": "Cat Facts",
            "type": "group",
          },
          Object {
            "id": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
            "missing": false,
            "name": "Kellan Alexander",
            "type": "contact",
          },
          Object {
            "id": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
            "missing": false,
            "name": "Norbert Kwizera",
            "type": "contact",
          },
          Object {
            "id": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
            "missing": false,
            "name": "Rowan Seymour",
            "type": "contact",
          },
        ],
      }
    }
    expressions={true}
    multi={true}
    name="Recipients"
    onChange={[Function]}
    placeholder="Select Contacts"
    searchable={true}
    shouldExclude={[Function]}
  />
  <p />
  <p>
    Step 2: Select a template on the WhatsApp tab
  </p>
</Dialog>
`;

exports[`SendBroadcastForm updates handles invalid compose attachments change 1`] = `
Object {
  "attachmentError": "",
  "attachments": Array [],
  "compose": Object {
    "validationFailures": Array [
      Object {
        "message": "Maximum allowed attachments is 3 files",
      },
    ],
    "value": "{\\"und\\":{\\"text\\":\\"Some message with an attachment\\",\\"attachments\\":[{\\"uuid\\":\\"test1\\",\\"content_type\\":\\"image/png\\",\\"type\\":\\"image/png\\",\\"filename\\":\\"name_test1\\",\\"url\\":\\"url_test1\\",\\"size\\":1024,\\"error\\":null},{\\"uuid\\":\\"test2\\",\\"content_type\\":\\"image/png\\",\\"type\\":\\"image/png\\",\\"filename\\":\\"name_test2\\",\\"url\\":\\"url_test2\\",\\"size\\":1024,\\"error\\":null},{\\"uuid\\":\\"test3\\",\\"content_type\\":\\"image/png\\",\\"type\\":\\"image/png\\",\\"filename\\":\\"name_test3\\",\\"url\\":\\"url_test3\\",\\"size\\":1024,\\"error\\":null},{\\"uuid\\":\\"test4\\",\\"content_type\\":\\"image/png\\",\\"type\\":\\"image/png\\",\\"filename\\":\\"name_test4\\",\\"url\\":\\"url_test4\\",\\"size\\":1024,\\"error\\":null},{\\"uuid\\":\\"test5\\",\\"content_type\\":\\"image/png\\",\\"type\\":\\"image/png\\",\\"filename\\":\\"name_test5\\",\\"url\\":\\"url_test5\\",\\"size\\":1024,\\"error\\":null},{\\"uuid\\":\\"test6\\",\\"content_type\\":\\"image/png\\",\\"type\\":\\"image/png\\",\\"filename\\":\\"name_test6\\",\\"url\\":\\"url_test6\\",\\"size\\":1024,\\"error\\":null},{\\"uuid\\":\\"test7\\",\\"content_type\\":\\"image/png\\",\\"type\\":\\"image/png\\",\\"filename\\":\\"name_test7\\",\\"url\\":\\"url_test7\\",\\"size\\":1024,\\"error\\":null},{\\"uuid\\":\\"test8\\",\\"content_type\\":\\"image/png\\",\\"type\\":\\"image/png\\",\\"filename\\":\\"name_test8\\",\\"url\\":\\"url_test8\\",\\"size\\":1024,\\"error\\":null},{\\"uuid\\":\\"test9\\",\\"content_type\\":\\"image/png\\",\\"type\\":\\"image/png\\",\\"filename\\":\\"name_test9\\",\\"url\\":\\"url_test9\\",\\"size\\":1024,\\"error\\":null},{\\"uuid\\":\\"test10\\",\\"content_type\\":\\"image/png\\",\\"type\\":\\"image/png\\",\\"filename\\":\\"name_test10\\",\\"url\\":\\"url_test10\\",\\"size\\":1024,\\"error\\":null},{\\"uuid\\":\\"test11\\",\\"content_type\\":\\"image/png\\",\\"type\\":\\"image/png\\",\\"filename\\":\\"name_test11\\",\\"url\\":\\"url_test11\\",\\"size\\":1024,\\"error\\":null}]}}",
  },
  "recipients": Object {
    "value": Array [
      Object {
        "id": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
        "name": "Cat Fanciers",
        "type": "group",
      },
      Object {
        "id": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
        "name": "Cat Facts",
        "type": "group",
      },
      Object {
        "id": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
        "missing": false,
        "name": "Kellan Alexander",
        "type": "contact",
      },
      Object {
        "id": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
        "missing": false,
        "name": "Norbert Kwizera",
        "type": "contact",
      },
      Object {
        "id": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
        "missing": false,
        "name": "Rowan Seymour",
        "type": "contact",
      },
    ],
  },
  "template": Object {
    "value": null,
  },
  "templateVariables": Array [],
  "uploadError": "",
  "uploadInProgress": false,
  "valid": false,
  "validAttachment": false,
}
`;

exports[`SendBroadcastForm updates handles recipent change 1`] = `
Object {
  "attachmentError": "",
  "attachments": Array [],
  "compose": Object {
    "value": "{\\"text\\":\\"Some broadcast message\\",\\"attachments\\":[]}",
  },
  "recipients": Object {
    "validationFailures": Array [],
    "value": Array [
      Object {
        "id": "group-0",
        "name": "My Group",
      },
    ],
  },
  "template": Object {
    "value": null,
  },
  "templateVariables": Array [],
  "uploadError": "",
  "uploadInProgress": false,
  "valid": true,
  "validAttachment": false,
}
`;

exports[`SendBroadcastForm updates handles valid compose attachments change 1`] = `
Object {
  "attachmentError": "",
  "attachments": Array [],
  "compose": Object {
    "value": "{\\"text\\":\\"Some broadcast message\\",\\"attachments\\":[]}",
  },
  "recipients": Object {
    "value": Array [
      Object {
        "id": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
        "name": "Cat Fanciers",
        "type": "group",
      },
      Object {
        "id": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
        "name": "Cat Facts",
        "type": "group",
      },
      Object {
        "id": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
        "missing": false,
        "name": "Kellan Alexander",
        "type": "contact",
      },
      Object {
        "id": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
        "missing": false,
        "name": "Norbert Kwizera",
        "type": "contact",
      },
      Object {
        "id": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
        "missing": false,
        "name": "Rowan Seymour",
        "type": "contact",
      },
    ],
  },
  "template": Object {
    "value": null,
  },
  "templateVariables": Array [],
  "uploadError": "",
  "uploadInProgress": false,
  "valid": true,
  "validAttachment": false,
}
`;

exports[`SendBroadcastForm updates handles valid compose text change 1`] = `
Object {
  "attachmentError": "",
  "attachments": Array [],
  "compose": Object {
    "value": "{\\"text\\":\\"Some broadcast message\\",\\"attachments\\":[]}",
  },
  "recipients": Object {
    "value": Array [
      Object {
        "id": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
        "name": "Cat Fanciers",
        "type": "group",
      },
      Object {
        "id": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
        "name": "Cat Facts",
        "type": "group",
      },
      Object {
        "id": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
        "missing": false,
        "name": "Kellan Alexander",
        "type": "contact",
      },
      Object {
        "id": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
        "missing": false,
        "name": "Norbert Kwizera",
        "type": "contact",
      },
      Object {
        "id": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
        "missing": false,
        "name": "Rowan Seymour",
        "type": "contact",
      },
    ],
  },
  "template": Object {
    "value": null,
  },
  "templateVariables": Array [],
  "uploadError": "",
  "uploadInProgress": false,
  "valid": true,
  "validAttachment": false,
}
`;

exports[`SendBroadcastForm updates should allow switching from router 1`] = `undefined`;
